@@ -1,3 +1,6 @@
+jmita 0.7.9 : 
+bug fix : toutes les fenêtres se fermaient lorsque l'on cliquait sur annuler
+
 jmita version 0.7.8 :
 bug fix : bug d'affichage
 
